overflow fix

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
 box-sizing: border-box;}
 
     body{
+        overflow-x: hidden;
         font-family:  monospace;
 
         background: black;
